// Movies table: stores basic movie information.
Table movies {
  id                int         [pk, increment] // Internal auto-increment primary key.
  movieId           int         [unique]        // Unique movie ID from the API.
  adult             boolean
  backdrop_path     varchar(255)
  original_language varchar(10)
  original_title    varchar(255)
  overview          text
  popularity        decimal(8,3)
  poster_path       varchar(255)
  release_date      date
  title             varchar(255)
  video             boolean
  vote_average      decimal(3,1)
  vote_count        int
}

// Genres table: stores available genres.
Table genres {
  id   int         [pk]
  name varchar(50)
}

// Join table for movies and genres.
Table movie_genres {
  movie_id int [ref: > movies.id, pk]
  genre_id int [ref: > genres.id, pk]
}

// Images table: stores images for movies.
Table images {
  id           int         [pk, increment]
  movie_id     int         [ref: > movies.id]
  type         enum("backdrop", "logo", "poster")
  file_path    varchar(255)
  aspect_ratio decimal(5,3)
  height       int
  width        int
  vote_average decimal(3,1)
  vote_count   int
  iso_639_1    varchar(10)
}

// Persons table: stores unique information about individuals (actors, directors, etc.).
Table persons {
  id                   int         [pk]  // API's person ID.
  name                 varchar(255)
  original_name        varchar(255)
  gender               int
  popularity           decimal(8,3)
  profile_path         varchar(255)
  known_for_department varchar(100)
}

// Movie credits table: unifies cast and crew credit lines.
Table movie_credits {
  credit_id  varchar(50) [pk]  // Unique credit line ID from the API.
  movie_id   int         [ref: > movies.id]
  person_id  int         [ref: > persons.id]
  type       enum("cast", "crew") // Distinguishes cast from crew.
  cast_order int         // Applicable for cast records (NULL for crew).
  character  varchar(255) // Applicable for cast records (NULL for crew).
  department varchar(100) // Applicable for crew records (NULL for cast).
  job        varchar(100) // Applicable for crew records (NULL for cast).
}
